# Fampay

./: .gitignore  Dockerfile  clients.py  config.py  docker-compose.yml  main.py  pyproject.toml  readme.md  router.py  run-app.sh  schemas.py  sync_data.py  wsgi.py
cron_script/: Dockerfile  entrypoint.sh  run.sh  sync_data.py
